@@ -6,14 +6,14 @@ use strict;
 
 use Test::More;
 use Test::Exception;
-use Test::Consul 0.009;
+use Test::Consul 0.011;
 
 use AnyEvent;
 use AnyEvent::Consul;
 use AnyEvent::Consul::Exec;
 
-my $tc1 = eval { Test::Consul->start };
-my $tc2 = eval { Test::Consul->start };
+my $tc1 = eval { Test::Consul->start(enable_remote_exec => 1) };
+my $tc2 = eval { Test::Consul->start(enable_remote_exec => 1) };
 
 SKIP: {
   skip "consul test environment not available", 1, unless $tc1 && $tc2;
